Addition of TO-DO form

--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
         <h3>SHARLENE KARINA WADHWA</h3>
     </div>
 
+    <hr />
+
+    <div>
+        <form>
+            <label for="tname">Enter Task Name</label>
+            <input type="text" id="tname" name="tname" placeholder="Name of the Assigned Task...">
+
+            <label for="did">Due Date of the Task</label>
+            <input type="date" id="did" name="did" placeholder="Due Date">
+
+            <label for="aid">Task Assigned To</label>
+            <input type="text" id="aid" name="aid" placeholder="Person task has been assigned to">
+
+            <input type="submit" value="Add New Task">
+        </form>
+    </div>
+
+    <hr />
+
+
 </body>
 
 <script src="/db.js"></script>
