Addition of Database

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <h3>SHARLENE KARINA WADHWA</h3>
     </div>
 
-    <hr />
 
     <div>
         <form>
@@ -36,11 +35,16 @@
         </form>
     </div>
 
-    <hr />
+    <div class="Tasks">
+        <h2> Pending Tasks</h2>
+        <div name="Tasks" id="Tasks"></div>
+    </div>
+    
 
 
 </body>
 
+<script src="https://unpkg.com/dexie/dist/dexie.js"></script>
 <script src="/db.js"></script>
 <script src="/script.js"></script>
 
