--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>TO-DO App</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/todoicon.png">
+    <link rel="icon" href="/favicon.ico">
 </head>
 
 <body>
