Updated the database

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="Tasks">
-        <h2> Pending Tasks</h2>
+        <h2> Tasks TO-DO:</h2>
         <div name="Tasks" id="Tasks"></div>
     </div>
     
