--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <link rel="apple-touch-icon" href="/assets/icons/icon-72x72.png" size="72x72">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-96x96.png" size="96x96">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-128x128.png" size="128x128">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-144x144.png" size="144x144">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-152x152.png" size="152x152">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" size="192x192">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-384x384.png" size="384x384">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-512x512.png" size="512x512">
+
+
+    <meta name="theme-color" content="#f2d2b2" />
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>TO-DO App</title>
